[package]
name = "systemd-wake"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Use systemd to wake up for future tasks"
documentation = "https://docs.rs/systemd-wake"
repository = "https://github.com/blaisdellma/systemd-wake"
homepage = "https://github.com/blaisdellma/systemd-wake"
keywords = ["systemd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
hex = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
